--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>My Exam</title>
 </head>
+<link href="css/style.css" rel='stylesheet'/>
 <body></body>
 <script src="js/js.js"></script>
 </html>
